fixed bug where google is aligned with search

--- a/src/components/MainSearchPage/MainSearchPage.scss
+++ b/src/components/MainSearchPage/MainSearchPage.scss
@@ -70,6 +70,9 @@ li a {
     width: 575px;
     border-radius: 30px;
     @include border-shadow;
+
+    display: flex;
+    align-items: center;
 }
 
 .bar:hover {
@@ -87,6 +90,8 @@ li a {
     width: 500px;
     font-size: 16px;
     @include focus-outline;
+
+    margin: 0 10px;
 }
 
 .voice {
@@ -112,12 +117,17 @@ li a {
 
     &:hover {
         @include border-shadow;
-        padding: 9px 19px;
         color: #808080;
     }
 
     &:focus {
         @include border-shadow;
-        padding: 9px 19px;
     }
+}
+
+.search-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
